# Multi-Agent_Meeting_Intelligence_Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTELMEET.txt  README.md  alembic.ini  architecture.md  docker-compose.yml  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 20260627_0001_initial_persistence_schema.py  20260703_0002_add_meeting_analysis_metadata.py
docs/: architecture-artifacts.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: LandingPage.tsx  main.tsx  vite-env.d.ts
frontend/src/app/: app.tsx  meeting-shell.tsx  query-provider.tsx
frontend/src/components/: AIAgents.tsx  ArchitectureSection.tsx  ExampleWorkflows.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Metrics.tsx  Navbar.tsx  Pricing.tsx  ProductPreview.tsx  Roadmap.tsx  Testimonials.tsx  TrustedBy.tsx  WhyIntelMeet.tsx  shared.tsx
frontend/src/hooks/: use-debounced-value.ts
frontend/src/lib/: api-client.ts  query-keys.ts
frontend/src/routes/: NotFound.tsx  root-route.tsx  router.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: meeting.ts  (+1 more)
scripts/: ingest_meetingbank.py
services/api-gateway/: main.py
src/meeting_intel/: __init__.py
tests/integration/: test_api_phase1.py  test_security_phase4.py
tests/unit/: test_auth.py  test_chunking.py  test_docker_infrastructure.py  test_ingestion.py  test_langgraph_workflow.py  test_migrations.py  test_production_integrations.py  test_repository.py  test_retrieval.py
(+41 files in other folders)
