[project]
name = "multi-agent-meeting-intelligence"
version = "0.1.0"
description = "Phase 1 meeting intelligence platform using FastAPI, OpenAI, ChromaDB, and MeetingBank ingestion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "openai>=1.40.0",
    "chromadb>=0.5.5",
    "sentence-transformers>=3.0.1",
    "pypdf>=4.3.1",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.7",
    "mypy>=1.11.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
